# programming-bitcoin

./: Makefile  README.md  _pyproject.toml  _pyrightconfig.json  _ruff.toml  pyproject.toml
exercises/: ch01.ipynb
python/programming_bitcoin/: __init__.py  ecc.py
python/tests/: test_ecc.py
requirements/: requirements-dev.in  requirements-dev.txt  requirements-tests.in  requirements-tests.txt  requirements.in  requirements.txt
tests/: conftest.py  test_ecc.py
